--- a/sorteio/index.html
+++ b/sorteio/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" href="/sorteio/img/logo.png" type="image/x-icon">
   <title>Sistema de Sorteio</title>
   <link rel="stylesheet" href="style.css">
 </head>
