--- a/sorteio/sorteio.html
+++ b/sorteio/sorteio.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="shortcut icon" href="./sorteio/img/logo.png" type="image/x-icon">
-  <title>Sistema de Sorteio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+  <title>Sistema de Sorteio</title>
 </head>
 <body>
   <h1>Sistema de Sorteio</h1>
