--- a/sorteio/sorteio.html
+++ b/sorteio/sorteio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
   <title>Sistema de Sorteio</title>
 </head>
