--- a/sorteio/sorteio.html
+++ b/sorteio/sorteio.html
@@ -7,6 +7,9 @@
   <title>Sistema de Sorteio</title>
 </head>
 <body>
+  <button class="call-button" onclick="callPage()">
+    <i class="icon fas fa-arrow-left"></i> Chamar Página
+</button>
   <h1>Sistema de Sorteio</h1>
   <div class="container">
     <div>
