--- a/sorteio/sorteio.html
+++ b/sorteio/sorteio.html
@@ -8,9 +8,6 @@
 </head>
 <body>
   <h1>Sistema de Sorteio</h1>
-  <button class="call-button" onclick="callPage()">
-    <i class="icon fas fa-arrow-left"></i> Chamar Página
-</button>
   <div class="container">
     <div>
       <label for="minValue">Valor mínimo:</label>
@@ -34,6 +31,9 @@
       <button onclick="limparTudo()">Limpar</button>
     </div>
   </div>
+  <button class="call-button" onclick="callPage()">
+    <i class="icon fas fa-arrow-left"></i> Voltar para o Menu
+</button>
 
   <script src="script.js"></script>
 </body>
